quiz_manifests/config-1-first.yaml
apiVersion: v1
kind: Pod
metadata:
  name: interactive-first
  labels:
    app: interactive-first
spec:
  containers:
    - image: quay.io/myafk/interactive:stable
      name: interactive-first
      command: ["interactive", "config", "-t=first"]
