quiz_manifests/config-2-second.yaml
apiVersion: v1
kind: Pod
metadata:
  name: interactive-second
  labels:
    app: interactive-second
spec:
  containers:
    - image: quay.io/myafk/interactive:stable
      name: interactive-second
      command: ["interactive", "config", "-t=second"]
      volumeMounts:
        - name: interactive-vol
          mountPath: /mnt/
  volumes:
    - name: interactive-vol
      configMap:
        name: interactive-cm-kv
