quiz_manifests/config-3-third.yaml
apiVersion: v1
kind: Pod
metadata:
  name: interactive-third
  labels:
    app: interactive-third
spec:
  containers:
    - image: quay.io/myafk/interactive:stable
      name: interactive-third
      command: ["interactive", "config", "-t=third"]
