quiz_manifests/config-4-fourth.yaml
apiVersion: v1
kind: Pod
metadata:
  name: interactive-fourth
  labels:
    app: interactive-fourth
spec:
  containers:
    - image: quay.io/myafk/interactive:stable
      name: interactive-second
      command: ["interactive", "config", "-t=fourth"]
      volumeMounts:
        - name: interactive-vol
          mountPath: /mnt/
  volumes:
    - name: interactive-vol
      secret:
        secretName: interactive-cm-kv-secret
