quiz_manifests/ingress-nginx-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx
          ports:
            - containerPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: ingress-svc-nginx
  labels:
    app: ingress-svc-nginx
spec:
  type: NodePort
  ports:
    - nodePort: 30080
      port: 20080
      targetPort: 80
  selector:
    app: nginx
---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1/$2
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: ingress-svc-nginx
              servicePort: 80
